# Sonic-Engine

./: .gitmodules  CMakeLists.txt  build_clean.py
Editor/: CMakeLists.txt
Editor/src/: main.cpp
SonicEngineCore/: CMakeLists.txt
SonicEngineCore/src/: Application.cpp  Sonic.h
SonicEngineCore/src/Utils/: Utils.cpp  Utils.h
SonicEngineCore/src/application/: Application.cpp  Application.h
SonicEngineCore/src/managers/EventManager/: EventBase.h  EventManagerMacros.h  WindowEvent.h
SonicEngineCore/src/managers/LogManager/: LogManager.cpp  LogManager.h
SonicEngineCore/src/managers/ResourceManager/TextureManager/: TextureManager.h
SonicEngineCore/src/math/: Constants.cpp  Constants.h
